--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -11,8 +11,37 @@ axum ="0.4.4"
 tokio = { version="1", features = ["full"] }
 tokio-pg-mapper = "0.2"
 tokio-pg-mapper-derive = "0.2"
+#serde and json
+serde_yaml = "0.8"
 serde = { version="1", features = ["derive"] }
 serde_json = "1.0"
+
 chrono = "0.4"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+
+#rbatis orm dep must use async-std(Because actix-web relies on tokio0.2)
+rbson = "2.0"
+rbatis = { version = "3.0", default-features = false, features = ["mysql","runtime-async-std-rustls"] }
+#must use async-std(Because actix-web relies on tokio0.2)
+async-std = "1.10"
+
+#static
+lazy_static = "1.4.0"
+
+#redis
+redis = {version = "0.21.5", features = ["async-std-comp"] }
+
+#captcha
+captcha = "0.0.8"
+#http client,use rust-tls replace to native tls
+reqwest = { version = "0.11",default-features = false, features = ["json","rustls-tls"] }
+
+#async trait
+async-trait = "0.1"
+#map
+indexmap = "1.7.0"
+
+
+#futures
+futures = "0.3"
