--- a/cassie_web/application.yml
+++ b/cassie_web/application.yml
@@ -3,7 +3,8 @@ debug: true
 #名称
 server_name: "cassieWeb"
 #server 地址
-server_url: "0.0.0.0:9999"
+host: "0.0.0.0",
+port: "9999"
 #缓存介质类型,单选("mem","redis")
 cache_type: "mem"
 #redis地址(cache_type为“redis”时有效)
