--- a/cassie_web/application.yml
+++ b/cassie_web/application.yml
@@ -3,14 +3,13 @@ debug: true
 #名称
 server_name: "cassieWeb"
 #server 地址
-host: "0.0.0.0",
-port: "9999"
+server: "0.0.0.0:9999"
 #缓存介质类型,单选("mem","redis")
 cache_type: "mem"
 #redis地址(cache_type为“redis”时有效)
 redis_url: "redis://127.0.0.1:6379"
 #数据库地址
-database_url: "mysql://root:root@localhost:3306/test"
+database_url: "mysql://root:root@localhost:3306/rivet_admin"
 #逻辑删除字段
 logic_column: "del"
 logic_un_deleted: 0
@@ -38,7 +37,6 @@ login_fail_retry_wait_sec: 30
 
 #接口白名单（免登陆直接访问）
 white_list_api:
- - "/"
  - "/admin/sys_login"
  - "/admin/captcha"
 
