--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -47,3 +47,9 @@ indexmap = "1.7.0"
 futures = "0.3"
 cassie_common = {path="../cassie_common"}
 casbin = { version = "2.0.2", default-features = false, features = ["runtime-async-std","cached","logging"] }
+
+validator = "0.14.0"
+validator_derive = "0.14.0"
+thread_local = { version = "1.1.3" }
+#jwt
+jsonwebtoken = "7"
