部分代码重构

--- a/cassie_web/auth_config/rbac_with_domains_model.conf
+++ b/cassie_web/auth_config/rbac_with_domains_model.conf
@@ -11,5 +11,5 @@ g = _, _, _
 e = some(where (p.eft == allow))
 
 [matchers]
-m = ciciMatch(r.sub,r.obj) || g(r.sub, p.sub, r.dom) && r.dom == p.dom && r.obj == p.obj && r.act == p.act
+m = ciciMatch(r.sub,r.obj) || g(r.sub, p.sub, r.dom) && r.dom == p.dom && keyMatch2(r.obj, p.obj) && r.act == p.act
 
