--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -15,8 +15,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 
 chrono = "0.4"
-tracing = "0.1"
-tracing-subscriber = "0.3"
 
 #rbatis orm dep must use async-std(Because actix-web relies on tokio0.2)
 rbson = "2.0"
@@ -53,3 +51,7 @@ validator_derive = "0.14.0"
 thread_local = { version = "1.1.3" }
 #jwt
 jsonwebtoken = "7"
+
+#log
+log = "0.4"
+fast_log = { version="1.4", features = ["lz4","zip", "gzip"]}
