添加用户 基础权限数据

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,6 @@
 [workspace]
-members=["cassie_common","cassie_web","cassie_casbin_adapter"]
+members=[
+    "cassie_common",
+    "cassie_web",
+    "cassie_casbin_adapter"
+    ]
