--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -31,7 +31,7 @@ redis = { version = "0.21.5", features = ["async-std-comp"] }
 #captcha
 captcha = "0.0.8"
 #http client,use rust-tls replace to native tls
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls","blocking"] }
 
 #async trait
 async-trait = "0.1"
@@ -55,3 +55,5 @@ jsonwebtoken = "7"
 #log
 log = "0.4"
 fast_log = { version="1.4", features = ["lz4","zip", "gzip"]}
+
+percent-encoding = "2.1.0"
