--- a/cassie_tests/Cargo.toml
+++ b/cassie_tests/Cargo.toml
@@ -6,5 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-autowired="0.1"
-autowired-derive = "0.1.8"
+event-listener = "2.5.2"
