--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -9,6 +9,7 @@ author = "String<348040933@qq.com>"
 [dependencies]
 axum = "0.4.4"
 tokio = { version = "1", features = ["full", "fs", "io-util", "sync"] }
+tower-http = { version = "0.2.0", features = ["cors"] }
 #serde and json
 serde_yaml = "0.8"
 serde = { version = "1", features = ["derive"] }
@@ -57,4 +58,3 @@ log = "0.4"
 fast_log = { version="1.4", features = ["lz4","zip", "gzip"]}
 
 percent-encoding = "2.1.0"
-tower = { version = "0.4", features = ["full"] }
