添加菜单name字段

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,5 @@ members = [
     "cassie_common",
     "cassie_web",
     "cassie_casbin_adapter",
-    "cassie_tests",
-    "cassie_app"
+    "cassie_tests"
 ]
