--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -58,3 +58,5 @@ log = "0.4"
 fast_log = { version="1.4", features = ["lz4","zip", "gzip"]}
 
 percent-encoding = "2.1.0"
+
+mongodb = { version = "2.1.0", default-features = false, features = ["async-std-runtime"] }
