--- a/cassie_web/application.yml
+++ b/cassie_web/application.yml
@@ -10,6 +10,7 @@ server:
 cache_type: "redis"
 #redis地址(cache_type为“redis”时有效)
 redis_url: "redis://127.0.0.1:6379"
+mongodb_url: "mongodb://localhost:27017"
 #数据库地址
 database_url: "mysql://root:root@localhost:3306/rivet_admin"
 #逻辑删除字段
