删除冗余导入

--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -57,3 +57,15 @@ log = "0.4"
 fast_log = { version="1.4", features = ["lz4","zip", "gzip"]}
 percent-encoding = "2.1.0"
 mongodb = { version = "2.1.0", default-features = false, features = ["async-std-runtime"] }
+
+[profile.release]
+opt-level = 3
+debug = false
+split-debuginfo = '...'  # Platform-specific.
+debug-assertions = false
+overflow-checks = false
+lto = false
+panic = 'unwind'
+incremental = false
+codegen-units = 16
+rpath = false
