添加上传服务基础service定义

--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -57,6 +57,8 @@ log = "0.4"
 fast_log = { version="1.4", features = ["lz4","zip", "gzip"]}
 percent-encoding = "2.1.0"
 mongodb = { version = "2.1.0", default-features = false, features = ["async-std-runtime"] }
+oss-rust-sdk = "0.3.1"
+
 
 [profile.release]
 opt-level = 3
