代码优化 重构 1:添加容器Container 2：初始化各容器方式

--- a/cassie_web/application.yml
+++ b/cassie_web/application.yml
@@ -55,6 +55,7 @@ api_white_list_api:
 #api超级管理员id直接跳过api权限
 super_admin_ids:
   - "1"
+#上传默认实现
 upload_type: "oss"
 oss:
   key_id: "LTAI5tARCXTX2k7zHw3o7JqW"
