--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -48,7 +48,6 @@ casbin = { version = "2.0.9", default-features = false, features = ["runtime-asy
 
 validator = "0.14.0"
 validator_derive = "0.14.0"
-thread_local = { version = "1.1.3" }
 #jwt
 jsonwebtoken = "7"
 
@@ -58,7 +57,7 @@ fast_log = { version="1.4", features = ["lz4","zip", "gzip"]}
 percent-encoding = "2.1.0"
 mongodb = { version = "2.1.0", default-features = false, features = ["async-std-runtime"] }
 oss-rust-sdk = "0.3.1"
-
+state = { version = "0.5", features = ["tls"] }
 
 [profile.release]
 opt-level = 3
