--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 members = [
     "cassie_common",
+    "cassie_config",
+    "cassie_domain",
     "cassie_web",
     "cassie_casbin_adapter",
     "cassie_tests"
