--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -40,9 +40,7 @@ indexmap = "1.7.0"
 
 #futures
 futures = "0.3"
-cassie_common = { path = "../cassie_common" }
-cassie_config = { path = "../cassie_config" }
-cassie_casbin_adapter = { path = "../cassie_casbin_adapter" }
+
 casbin = { version = "2.0.9", default-features = false, features = ["runtime-async-std", "cached", "logging"] }
 
 validator = "0.14.0"
@@ -57,6 +55,15 @@ percent-encoding = "2.1.0"
 mongodb = { version = "2.1.0", default-features = false, features = ["async-std-runtime"] }
 oss-rust-sdk = "0.3.1"
 state = { version = "0.5", features = ["tls"] }
+
+
+
+#cassie
+cassie_domain = { path = "../cassie_domain" }
+cassie_common = { path = "../cassie_common" }
+cassie_config = { path = "../cassie_config" }
+cassie_casbin_adapter = { path = "../cassie_casbin_adapter" }
+
 
 [profile.release]
 opt-level = 3
