--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "cassie_common",
     "cassie_config",
     "cassie_domain",
+    "cassie_orm",
     "cassie_web",
     "cassie_casbin_adapter",
     "cassie_tests"
