--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -59,6 +59,7 @@ state = { version = "0.5", features = ["tls"] }
 cassie_domain = { path = "../cassie_domain" }
 cassie_common = { path = "../cassie_common" }
 cassie_config = { path = "../cassie_config" }
+cassie_orm = { path = "../cassie_orm" }
 cassie_casbin_adapter = { path = "../cassie_casbin_adapter" }
 
 
