--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "cassie_config",
     "cassie_domain",
     "cassie_orm",
+    "cassie_upload",
     "cassie_web",
     "cassie_casbin_adapter",
     "cassie_tests"
