添加数据字典缓存

--- a/cassie_tests/Cargo.toml
+++ b/cassie_tests/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+[lib]
+proc-macro = true
 [dependencies]
-event-listener = "2.5.2"
+syn = "1.0"
+quote = "1.0"
+cached = "0.34.0"
