添加租户化代码说明

--- a/cassie_web/application.yml
+++ b/cassie_web/application.yml
@@ -69,6 +69,4 @@ tenant:
   column: "agency_code"
   ignore_table:
     - "sys_log_login"
-    - "sys_dict_type"
-    - "sys_dict_data"
-    - "sys_menu"
+    - "sys_user"
