--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -54,7 +54,7 @@ percent-encoding = "2.1.0"
 mongodb = { version = "2.1.0", default-features = false, features = ["async-std-runtime"] }
 
 state = { version = "0.5", features = ["tls"] }
-cached = {version="0.34.0", features = ["async","redis_async_std","redis_tokio"]}
+cached = {version="0.34.0"}
 
 #sqlparse
 sqlparser = "0.15.0"
