添加 自定义路由

--- a/cassie_tests/Cargo.toml
+++ b/cassie_tests/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 [lib]
 proc-macro = true
 [dependencies]
-syn = "1.0"
-quote = "1.0"
-cached = "0.34.0"
+
+pharos = "0.5.3"
+futures = { version="^0.3"}
+async-std = {version="1.10.0",features = ["attributes"]}
+tokio = { version = "1", features = ["full", "fs", "io-util", "sync"] }
