--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -10,7 +10,7 @@ author = "String<348040933@qq.com>"
 axum ={version="0.4.8",features = ["multipart"] }
 tokio = { version = "1", features = ["full", "fs", "io-util", "sync"] }
 tower ={version="0.4.0",features = ["full"] }
-tower-http = { version = "0.2.0", features = ["cors"] }
+tower-http = { version = "0.2.0", features = ["full"] }
 #serde and json
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
