--- a/cassie_web/application.yml
+++ b/cassie_web/application.yml
@@ -12,7 +12,7 @@ cache_type: "redis"
 redis_url: "redis://127.0.0.1:6379"
 mongodb_url: "mongodb://localhost:27017"
 #数据库地址
-database_url: "mysql://root:123456@localhost:3306/rivet_admin"
+database_url: "mysql://root:root@localhost:3306/rivet_admin"
 #逻辑删除字段
 logic_column: "del"
 logic_un_deleted: 0
