--- a/cassie_domain/Cargo.toml
+++ b/cassie_domain/Cargo.toml
@@ -15,3 +15,4 @@ rbatis = { version = "3.0", default-features = false, features = ["mysql", "runt
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 cassie_common = { path = "../cassie_common" }
+getset = "0.1.2"
