--- a/cassie_tests/Cargo.toml
+++ b/cassie_tests/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[lib]
-proc-macro = true
+
 [dependencies]
 sqlparser = "0.15.0"
+oxide-auth = "0.5.1"
+axum = "0.4"
