--- a/cassie_tests/Cargo.toml
+++ b/cassie_tests/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlparser = "0.15.0"
+sqlparser = "0.16.0"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls","blocking"] }
+tokio = { version = "1", features = ["full", "fs", "io-util", "sync"] }
+rbson = "2.0"
+rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
