--- a/cassie_tests/Cargo.toml
+++ b/cassie_tests/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 sqlparser = "0.16.0"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls","blocking"] }
 tokio = { version = "1", features = ["full", "fs", "io-util", "sync"] }
+serde = { version = "1", features = ["derive"] }
 rbson = "2.0"
 rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
