--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -64,6 +64,8 @@ cassie_orm = { path = "../cassie_orm" }
 #cassie 上传相关 默认实现 aliyun oss
 cassie_storage = { path = "../cassie_storage" }
 
+cassie_wx = { path = "../cassie_wx" }
+
 #cassie 规则引擎
 deno_core = "0.131.0"
 deno_runtime = "0.57.0"
