--- a/cassie_wx/Cargo.toml
+++ b/cassie_wx/Cargo.toml
@@ -23,6 +23,9 @@ bytes = { version = "1.1.0" }
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls","blocking"] }
 tokio = { version = "1.17.0", features = ["full"]}
 indicatif = { version = "0.16.2" }
+
+
+percent-encoding = "2.1.0"
 #缓存 支持redis 本地缓存
 cached = {version="0.34.0",features = ["redis_store","redis_async_std","async"]}
 #cassie 公共实体util定义
