--- a/cassie_config/Cargo.toml
+++ b/cassie_config/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+[lib]
+path = "src/lib.rs"
 [dependencies]
 #serde and json
 serde_yaml = "0.8"
