--- a/cassie_common/Cargo.toml
+++ b/cassie_common/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+[lib]
+path = "src/lib.rs"
 [dependencies]
 serde = { version="1", features = ["derive"] }
 serde_json = "1.0"
