--- a/cassie_domain/Cargo.toml
+++ b/cassie_domain/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+[lib]
+path = "src/lib.rs"
 [dependencies]
 validator = "0.14.0"
 validator_derive = "0.14.0"
