--- a/cassie_tests/Cargo.toml
+++ b/cassie_tests/Cargo.toml
@@ -13,3 +13,5 @@ serde = { version = "1", features = ["derive"] }
 rbson = "2.0"
 rbatis = { version = "3.0", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
 gag = "1.0.0"
+deno_core = "0.133.0"
+deno_runtime = "0.59.0"
