--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -6,10 +6,10 @@ author = "String<348040933@qq.com>"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum ={version="0.5.4",features = ["multipart"] }
+axum ={version="0.5.4",features = ["multipart","ws"] }
 tokio = { version = "1" }
 tower ={version="0.4.0" }
-tower-http = { version = "0.2.0" }
+tower-http = { version = "0.2.0",features=["cors"] }
 #serde and json
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
@@ -71,3 +71,4 @@ deno_runtime = "0.59.0"
 #cassie casbin mysql数据库orm层的适配器
 cassie_casbin_adapter = { path = "../cassie_casbin_adapter" }
 
+retry = "1.3.1"
