--- a/cassie_tests/Cargo.toml
+++ b/cassie_tests/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 
 [dependencies]
 cassie_event = {path="../cassie_event"}
+serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
