--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -67,7 +67,7 @@ cassie_storage = { path = "../cassie_storage" }
 cassie_wx = { path = "../cassie_wx" }
 #cassie casbin mysql数据库orm层的适配器
 cassie_casbin_adapter = { path = "../cassie_casbin_adapter" }
-cassie_event = {path="../cassie_event"}
+cassie_macros = {path= "../cassie_macros" }
 #cassie 规则引擎
 deno_core = "0.133.0"
 deno_runtime = "0.59.0"
