--- a/cassie_tests/Cargo.toml
+++ b/cassie_tests/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cassie_event = {path="../cassie_event"}
+cassie_macros = {path= "../cassie_macros" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 cassie_msg = {path="../cassie_msg"}
