--- a/cassie_web/Cargo.toml
+++ b/cassie_web/Cargo.toml
@@ -7,7 +7,7 @@ author = "String<348040933@qq.com>"
 
 [dependencies]
 axum ={version="0.5.4",features = ["multipart","ws"] }
-tokio = { version = "1" }
+tokio = { version = "1",features=["full"]}
 tower ={version="0.4.0" }
 tower-http = { version = "0.2.0",features=["cors"] }
 #serde and json
