--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,6 @@
 #debug模式，true输出控制台日志，false只输出文件日志.生产环境需要关闭debug，rbatis也需移除"debug_mode"
 debug: true
+is_demo: true
 #名称
 server_name: "cassieWeb"
 #server 地址
